[gd_scene load_steps=5 format=3 uid="uid://b2krug8ss4rwg"]

[ext_resource type="Script" path="res://scripts/hero_list_item.gd" id="1_5kb8s"]
[ext_resource type="FontFile" uid="uid://ccc7h37nygjqu" path="res://assets/fonts/方正隶书简体.TTF" id="1_c4elu"]
[ext_resource type="Script" path="res://scripts/rich_text_label.gd" id="2_o7gkw"]
[ext_resource type="Script" path="res://scripts/city_name_text_label.gd" id="3_nmueg"]

[node name="HBoxContainer" type="HBoxContainer"]
script = ExtResource("1_5kb8s")

[node name="NameTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(80, 29)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_c4elu")
bbcode_enabled = true
text = "[center][color=#91c2d5][u][url]赵云[/url][/u][/color] "
script = ExtResource("3_nmueg")

[node name="BingTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(80, 29)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_c4elu")
bbcode_enabled = true
text = "[center][color=#91c2d5]3000"
script = ExtResource("2_o7gkw")

[node name="ZhongTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(80, 29)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_c4elu")
bbcode_enabled = true
text = "[center][color=#91c2d5]98"
script = ExtResource("2_o7gkw")

[node name="TiTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(80, 29)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_c4elu")
bbcode_enabled = true
text = "[center][color=#91c2d5]99"
script = ExtResource("2_o7gkw")

[connection signal="meta_clicked" from="NameTextLabel" to="NameTextLabel" method="_on_meta_clicked"]
[connection signal="meta_hover_ended" from="NameTextLabel" to="NameTextLabel" method="_on_meta_hover_ended"]
[connection signal="meta_hover_started" from="NameTextLabel" to="NameTextLabel" method="_on_meta_hover_started"]
[connection signal="meta_hover_ended" from="BingTextLabel" to="BingTextLabel" method="_on_meta_hover_ended"]
[connection signal="meta_hover_started" from="BingTextLabel" to="BingTextLabel" method="_on_meta_hover_started"]
[connection signal="meta_hover_ended" from="ZhongTextLabel" to="ZhongTextLabel" method="_on_meta_hover_ended"]
[connection signal="meta_hover_started" from="ZhongTextLabel" to="ZhongTextLabel" method="_on_meta_hover_started"]
[connection signal="meta_hover_ended" from="TiTextLabel" to="TiTextLabel" method="_on_meta_hover_ended"]
[connection signal="meta_hover_started" from="TiTextLabel" to="TiTextLabel" method="_on_meta_hover_started"]
